# fastqueue

./: Dockerfile  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yaml  test.yaml
app/: database.py  main.py  settings.py
app/auth/: exceptions.py  service.py
app/auth2/: dependencies.py  exceptions.py  models.py  schemas.py  service.py  tokens.py
app/core/message/: enums.py  schemas.py  service.py
app/core/queue/: exceptions.py  manager.py  models.py  registry.py  schemas.py  service.py
app/events/: create_users.py  lifespan.py  load_queues.py  restore_loop.py
app/router/: api.py  auth2.py  message.py  queue.py
app/utils/: cache.py
cli/: auth.py  main.py  queue.py
docs/: _config.yml  api.md  cli.md  index.md
docs/_layouts/: default.html
stress/: README.md  consumer.py  main.py  producer.py
tests/: test_auth.py  test_queue.py
tests/deprecated/: test_auth_old_auth.py  test_queue_old_auth.py
